# advent-of-code

./: .gitignore  Cargo.toml  README.md  captains-log.md
2024/day-01/: Cargo.toml  README.md
2024/day-01/benches/: benchmarks.rs
2024/day-01/src/: part1.rs  part2.rs
aoc-cli/: Cargo.toml
aoc-cli/daily-template/: Cargo.toml
aoc-cli/daily-template/benches/: benchmarks.rs
aoc-cli/daily-template/src/: part1.rs  part2.rs
aoc-cli/src/: jobs.rs  main.rs
aoc-tools/: Cargo.toml
aoc-tools/src/: lib.rs
