[workspace]
package.authors = ["Philip Linden <lindenphilipj@gmail.com>"]
resolver = "2"

members = [
    "aoc-cli",
    "2024/day-*",
]
default-members = ["aoc-cli"]

[workspace.dependencies]
# linear algebra and math
glam = "0.29.0"
rayon = "1.10.0"

# diagnostics
divan = "0.1.16"
thiserror = "2.0.3"
miette = "7.4.0"

# logging
log = "0.4.22"
pretty_env_logger = "0.5.0"

# parsing
nom = "7.1.3"
nom_locate = "4.2.0"
nom-supreme = "0.8.0"
tempfile = "3.3"
