[workspace]
package.authors = ["Philip Linden <lindenphilipj@gmail.com>"]
resolver = "2"

members = [
    "aoc-cli",
    "aoc-tools",
    "2024/day-*",
]

[workspace.dependencies]
# linear algebra and math
glam = "0.29.0"
rayon = "1.10.0"

# diagnostics
divan = "0.1.16"
thiserror = "2.0.3"
miette = "7.4.0"

# logging
log = "0.4.22"
pretty_env_logger = "0.5.0"

# file handling
tempfile = "3.3"
