# Cargo.toml
[package]
name = "aoc-cli"
authors = ["Philip Linden <lindenphilipj@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "Streamlined build and development CLI for Advent of Code"

[dependencies]
cargo-generate = "0.22.0"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
dotenv = { version = "0.15.0", features = ["clap"] }
nom.workspace = true
reqwest = { version = "0.11", features = ["blocking"] }

[[bin]]
name = "aoc"
path = "src/main.rs"

[resources]
include = [
    "src/daily-template/*",
]
