# Cargo.toml
[package]
name = "aoc-cli"
authors = ["Philip Linden <lindenphilipj@gmail.com>"]
version = "0.2.0"
edition = "2021"
description = "Streamlined build and development CLI for Advent of Code"

[dependencies]
aoc-tools = { path = "../aoc-tools" }

chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
dotenv = { version = "0.15.0", features = ["clap"] }
include_dir = "0.7.4"
tempfile.workspace = true
log.workspace = true
pretty_env_logger.workspace = true
reqwest = { version = "0.12", features = ["blocking"] }


[[bin]]
name = "aoc"
path = "src/main.rs"

[resources]
include = ["src/daily-template/*"]
