[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-tools = { path = "../../aoc-tools" }
log.workspace = true
pretty_env_logger.workspace = true
miette.workspace = true
thiserror.workspace = true

[dev-dependencies]
divan.workspace = true

[[bench]]
name = "{{project-name}}-bench"
path = "benches/benchmarks.rs"
harness = false
